--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+- Idea - See critics who are reviewing movies today that have been active up to 20 years, if it's significant, try it with them where you find a list of cult movies and mix those in with each page. also probably have to see first last name and maybe combine
+
+
 Movie.where("release_date > ?", 3.years.ago).joins(:critic_movies).group('movies.id').having('count(movie_id) > 10') # should get movies less than 3 years old with more than 10 reviews
 Order of tasks:
 
@@ -10,6 +13,7 @@ Order of tasks:
 
 - when reviews are done. delete all movie reviews that are older than 5 years and movies that are older than 5 years. 
 
+-handle tba date for reviews
 - figure out why in theater scraper fails at "rought night" saying 
 NoMethodError: undefined method `search' for nil:NilClass
 /Users/nickdamiano/code/critic-match/critic-match/app/jobs/metacritic_scraper.rb:94:in `scrape_one_movies_reviews'
