--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,14 @@
 Order of tasks:
 
 Now
-
+- get button click events working so when you click it fires and logs the number and the movie's id
+- get button click events so after all movies have been rated it loads the next 5
+- eliminate duplicates from the preload
+- then get the button reviews creating localstorage data structures
+- create top 3 critics and output them after each wave of movies disappears
+- creating minimal styling for top 3 critics on page and update it with the change of movies
+- Styling for css movies
+- Media queries to affect number of movies loaded
 
 Later
 - After scraper is done, add field to reviews for author name by creating a rake task that gets each review in batches, gets the critic name, updates the record and saves the record. tricky part is the batches
@@ -15,26 +22,8 @@ NoMethodError: undefined method `search' for nil:NilClass
 
 Ideas for later
 See critics who are reviewing movies today that have been active up to 20 years, if it's significant, try it with them where you find a list of cult movies and mix those in with each page. also probably have to see first last name and maybe combine
+- it would be cool if the app could detect which movies they were rating and which they weren't seeing and adjust the movies it asked them, like by genre without asking them. 
 
--front page part 1 (Saturday)
-	- load movie info and console log the movie info
-	- type 1-4 to rate it maybe 5 for haven't seen
-	- the number is captured, pull local storage for hash for critic matches
-	- each review for that movie is iterated through
-		- update critic hash so it's like [1: {match: 2, difference: 50, percentage: 75}] (then for critic when you click it shows /critic/id and does a db call)
-		- pull percentage, if it is higher than top 3, replace lowest score top 3 with info about critic (name, id, percentage, matches)
-	- save back into local storage
-	- log top 3 critic info with new lines between them
-	- put the next movie into console log and wait for input
-
-
--front page part 2 (Sunday)
-	- html elements with image thumbnail, buttons
-	- clicking the button - listener hears it, runs code to create matches hash
-		-code running shouldn't happen until all movie elements are selected even though there are one
-	- html element in top part showing bars percentage for top 3 critics
-	styling for this is final
-	- loads new movie after each one is reviewed
 
 -front page part 3 (Monday / Tuesday )
 	- have media queries implemented for page width up to 5 or 6 movies
