--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,11 @@
 Order of tasks:
 
 Now
-- get button click events working so when you click it fires and logs the number and the movie's id
+- top match should load with the movies - should persist in session storage and be pulled out on page load
+- add code to build object for user movie reviews, movie_id and their score to keep track for when you do critics page later and need to compare. also to see which movies they've already looked at so it's like if user_reviews[movie_id] then don't load it, pop off another
+- eliminate duplicates of active from main, and anything thats been rated already from main.
+- prevent duplicate reviews - i guess this goes in hand with the above
 - get button click events so after all movies have been rated it loads the next 5
-- eliminate duplicates from the preload
 - then get the button reviews creating localstorage data structures
 - create top 3 critics and output them after each wave of movies disappears
 - creating minimal styling for top 3 critics on page and update it with the change of movies
