--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,15 @@
 Order of tasks:
 
 Now
+- for top match, instead of looping, just have 3 different critics variables?
+
 - top match should load with the movies - should persist in session storage and be pulled out on page load
-- add code to build object for user movie reviews, movie_id and their score to keep track for when you do critics page later and need to compare. also to see which movies they've already looked at so it's like if user_reviews[movie_id] then don't load it, pop off another
+- add code to build object in session storage for user movie reviews, movie_id and their score to keep track for when you do critics page later and need to compare. also to see which movies they've already looked at so it's like if user_reviews[movie_id] then don't load it, pop off another
 - eliminate duplicates of active from main, and anything thats been rated already from main.
 - prevent duplicate reviews - i guess this goes in hand with the above
+- add thing to mark movie haven't seen - part of disable action - should update user session storage with a record so it doesn't get asked again
 - get button click events so after all movies have been rated it loads the next 5
-- then get the button reviews creating localstorage data structures
-- create top 3 critics and output them after each wave of movies disappears
+- prevent user from reviewing a movie twice by clicking the same button multiple times. Disable or update review. probably disable. 
 - creating minimal styling for top 3 critics on page and update it with the change of movies
 - Styling for css movies
 - Media queries to affect number of movies loaded
