--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,42 @@
 Order of tasks:
 
+							Old version
+
+updateTopMatch - 
+	- gets html element, gets percentage, matches, and id, then sets innerhtml to result
+getTopMatch - 
+	- runs on page load to pull out existig top match into variable and call
+	update top match. if not exist then it sets it as a single object
+UpdateCriticResults
+	- if percentage is higher and matches is higher call UpdateTopMatch
+	- if the ids match with the top match, we just update top match with
+	updateTopMatch
+	- session store top match
+
+	order: get top match on page load, then updatecriticresults on review button click, then update Top match html
+
+	normal: they click the button, it evaluates top match and updatesTopMatch as needed
+
+New Version
+	top match is an array of objects
+	when button is clicked, loop through array, 
+		- if critic ids match, update the array element and break. 
+		- else if percentage is higher and matches is = or higher, replace that element with current critic
+		- Session store
+		- call update Top match with new result as parameter
+	Update Top match	
+	 - sort the objects by percentage
+	 - if top 3 result already, destroy parent node
+	 - create a div with a class to contain the top 3 and append it 
+	 - create 3 divs
+	 - set each div to a critic in one line each
+	 - append those divs to the parent object
+
+
+
+
 Now
+- refactor variables to check for session storage and if it exists, return it to the variable that called it and if it doesn't exist. set it 
 - Get top 3 critics working either with an array or 3 separate variables
 - prevent duplicates for all
 - add styling for the number that is clicked
