adds css styling. next is wrapping title.

--- a/todo.txt
+++ b/todo.txt
@@ -37,6 +37,7 @@ New Version
 
 Now
 - Fix styling for clicked button so it doesn't expand, just changes color. no shadows
+- put title at top and buttons at bottom so the buttons dont get pushed around? probably too much work.
 - Get top 3 critics working either with an array or 3 separate variables
 - prevent duplicates for all
 - Get styling for movie down
