--- a/todo.txt
+++ b/todo.txt
@@ -36,14 +36,9 @@ New Version
 
 
 Now
-- Fix styling for clicked button so it doesn't expand, just changes color. no shadows
-- put title at top and buttons at bottom so the buttons dont get pushed around? probably too much work.
 - Get top 3 critics working either with an array or 3 separate variables
 - prevent duplicates for all
-- Get styling for movie down
 - Style top 3 critics section
-- Fix movie titles so they are capitalized
-- Styling for css movies
 - Media queries to affect number of movies loaded and mobile view with easy buttons to press
 - recent scrape and cron job scrape
 - Javascript tests with 
@@ -53,10 +48,10 @@ Later
 - when reviews are done. delete all movie reviews that are older than 5 years and movies that are older than 5 years. 
 
 Bugs
+- when you click on the critic match header it flashes movies in a row below for a second before loading just the top six
 - figure out why in theater scraper fails at "rought night" saying 
 NoMethodError: undefined method `search' for nil:NilClass
 /Users/nickdamiano/code/critic-match/critic-match/app/jobs/metacritic_scraper.rb:94:in `scrape_one_movies_reviews'
-- add exception for Mechanize::ResponseReadError: Content-Length (19428) does not match response body length (17099)
 
 Ideas for later
 See critics who are reviewing movies today that have been active up to 20 years, if it's significant, try it with them where you find a list of cult movies and mix those in with each page. also probably have to see first last name and maybe combine
