--- a/todo.txt
+++ b/todo.txt
@@ -38,6 +38,7 @@ omg ok. if id is the same,
 
 Now
 Front end
+- fix why the top match is getting duplicates
 - load top_match into dom on refresh
 - percentage loads everything with 0 percent width so it's very tall before the bar expands. the bar should expand first and then load the text data.
 - fix or remove animation
@@ -62,6 +63,7 @@ Bugs
 - figure out why in theater scraper fails at "rought night" saying 
 NoMethodError: undefined method `search' for nil:NilClass
 /Users/nickdamiano/code/critic-match/critic-match/app/jobs/metacritic_scraper.rb:94:in `scrape_one_movies_reviews'
+- all movies has 12 movies temporarily because it pulls 6 and also gets 6 more which means when i do delete active from all it deletes 12 instead of 6 whenever i'm refreshing the page. if i just load it once and click on the movies it will not have that problem.
 
 Ideas for later
 See critics who are reviewing movies today that have been active up to 20 years, if it's significant, try it with them where you find a list of cult movies and mix those in with each page. also probably have to see first last name and maybe combine
