changes the logic in compare critics for top match so it loops through first and updates the existing critic. prevents duplicate top matches, also gets rid of -1 rating for havent seen movies.

--- a/todo.txt
+++ b/todo.txt
@@ -39,7 +39,7 @@ omg ok. if id is the same,
 Now
 Front end
 - fix why the top match is getting duplicates
-- load top_match into dom on refresh
+- load top_match into dom on refresh!
 - percentage loads everything with 0 percent width so it's very tall before the bar expands. the bar should expand first and then load the text data.
 - fix or remove animation
 - Get top 3 critics working either with an array or 3 separate variables
